# mTCP-skeleton

./: CMakeLists.txt  README.md  build.sh  build_libmemcached.sh
conf/: epserver.conf  epserver_server.conf
include/: mtcp_skeleton_args.h  mtcp_skeleton_debug.h  mtcp_skeleton_server_config.h  mtcp_skeleton_thread.h  mtcp_skeleton_utils.h
mininet/: README.md  main.py
mininet/conf/epoll_server/: arp.conf  main.conf  route.conf
mininet/scripts/: client.sh  mtcp_epoll_server.sh
mtcp_conf/: server.conf
samples/epoll_server/: server.c  server.h
samples/legacy/client/: client.c  client.h  main.c
samples/legacy/server/: main.c  server.c  server.h
samples/mtcp_client/: main.c
samples/mtcp_epoll_server/: main.c  server.c  server.h
samples/mtcp_server/: main.c  server.c  server.h
src/: debug_utils.h  epserver.c  epserver.h  mtcp_debug.h  mtcp_skeleton_args.c  mtcp_skeleton_thread.c  mtcp_skeleton_utils.c  server.c  utils.c  utils.h
src/client/: client.c  main.c
src/dpdk_test/: main.c
src/mtcp_server/: main.c  server.c  server.h
src/server/: main.c  server.c  server.h
utils/: config_dpdk_hugepage.sh
utils/dpdk_test/: main.c
